--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 
@@ -242,10 +243,10 @@
         </div>
         <div style="text-align:center;width:480px;" class="center">
           <center>
-            <button onmousedown="move('l')" onmouseup="clearmove()" ontouchstart="move('l')">LEFT</button><br><br>
-            <button onmousedown="move('b')" onmouseup="clearmove()" ontouchstart="move('b')">BACK</button>
-            <button onmousedown="move('f')" onmouseup="clearmove()" ontouchstart="move('f')">FORDWARE</button><br><br>
-            <button onmousedown="move('r')" onmouseup="clearmove()" ontouchstart="move('r')">RIGHT</button>
+            <button class="button button3" onmousedown="move('l')" onmouseup="clearmove()" ontouchstart="move('l')">LEFT</button><br><br>
+            <button class="button button4" onmousedown="move('b')" onmouseup="clearmove()" ontouchstart="move('b')">BACK</button>
+            <button class="button button5" onmousedown="move('f')" onmouseup="clearmove()" ontouchstart="move('f')">FORDWARE</button><br><br>
+            <button class="button button3" onmousedown="move('r')" onmouseup="clearmove()" ontouchstart="move('r')">RIGHT</button>
           </center>
         </div>
         <br>
@@ -257,17 +258,17 @@
             <br>
         </tr>
         <td>
-          <p id="plane">go</p>
+          <h1 id="plane">go</h1>
         </td>
 
         <tr>
-          <td><button onmousedown="move()" onmouseup="clearmove()" ontouchstart="move()">DEC</button></td>
+          <td><button class="button button2" onmousedown="move()" onmouseup="clearmove()" ontouchstart="move()">RUN CODE</button></td>
         </tr>
         </center>
         <!--</body>-->
         <br>
         <center>
-          <input type="button" id="btnCompile" value="RUN" onclick="init();" />
+          <input  class="button" type="button" id="btnCompile" value="COMPILER" onclick="init();" />
         </center>
         <div class="center">
           <center>
